--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1,32 +1,44 @@
 body{
     background-color: black;
+    margin: auto;
 }
 
 /* Classes */
+.meat{
+    margin: auto;
+    position: relative;
+    left: 150px;
+}
 .top-container{
+    position: absolute;
     background-color: blue;
-    width: 1500px;
+    width: 1208px;
     height: 100px;
     margin: auto;
 
 }
 .middle-container{
     background-color: lightblue;
-    position: relative;
-    width: 500px;
-    height: 500px;
+    position: absolute;
+    display: inline-block;
+    width: 800px;
+    height: 1000px;
     margin: auto;
 }
 .left-container{
     background-color: gray;
-    position:left;
-    width: 100px;
-    height: 500px;
+    position:absolute;
+    display: inline-block;
+    width: 200px;
+    height: 1000px;
+    margin: auto;
 
 }
 .right-container{
     background-color: gray;
-    position:right;
-    width: 100px;
-    height: 500px;
+    position:absolute;
+    display: inline-block;
+    width: 200px;
+    height: 1000px;
+    margin: auto;
 }
