--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -1,70 +1,51 @@
-body{
-    background-color: #dee5e5;
-    margin: auto;
-}
+* {
+    box-sizing: border-box; 
+   }
+   body {
+     margin: 0;
+   }
 
-/* Classes */
-.meat{
-    display: flex;
-    justify-content: center;
-    margin: auto;
-}
-.top-container{
-    position: absolute;
-    background-color: #082D0F;
-    width: 80%;
-    height: 12%;
-    margin: auto;
+  header, footer {
+    background: yellowgreen;
+    height: 10vh;
+  }
 
-}
-.middle-container{
-    background-color: #17b890;
-    position: absolute;
-    top: 14%;
+  
+     /* CLASSES */
+  .image-container{
+    flex: 0 0 10vh;
+    width: 262px;
+    height: 262px;
+    margin: 10px;
 
-    width: 800px;
-    height: 1000px;
-    margin: auto;
-}
-.left-container{
-    background-color: #5e807f;
-    position:absolute;
-    top: 14%;
-    left: 10%;
-
-    width: 200px;
-    height: 1000px;
-    margin: auto;
-
-}
-.right-container{
-    background-color: #5e807f;
-    position:absolute;
-    top: 14%;
-    right: 10%;
-
-    width: 200px;
-    height: 1000px;
-    margin: auto;
-}
-.image-container{
-    display: inline-block;
-    position: relative;
-    left: 40px;
-    width: 200px;
-    height: 200px;
-    margin: 20px 20px 20px 20px;
     outline: solid 2px black;
 }
-.add-photo{
-    display: inline-block;
-    position: relative;
 
-    left: 40px;
-    width: 200px;
-    height: 200px;
-    margin: 20px 20px 20px 20px;
+.add-photo{
+    flex: 0 0 10vh;
+
+    width: 262px;
+    height: 262px;
+    margin: 10px;
 }
 .add-photo:hover{
     opacity: 0.7;
 }
+
+   /* ID'S */
+   #main {
+     display: flex;
+     min-height: calc(100vh - 20vh);
+   }
+   #main > middle {
+     flex: 1;
+   }
+   #main > vreklame, 
+   #main > hreklame {
+     flex: 0 0 20vw;
+     background: beige;
+   }
+   #main > vreklame {
+     order: -1;
+   }
+
