--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -31,6 +31,12 @@ header, footer {
     outline: solid 2px black;
 }
 
+.image-container:hover{
+  opacity: 0.7;
+  cursor: pointer;
+  outline-color: red;
+}
+
 
    /* ID'S */
    #main {
